...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Kqv-8L-q4D">
                                <rect key="frame" x="412" y="269" width="200" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="XZP-dm-uZQ">
                                <rect key="frame" x="412" y="314" width="200" height="30"/>
                                <constraints>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcu-iF-HZt">
                                <rect key="frame" x="491" y="369" width="42" height="30"/>
                                <state key="normal" title="Log In"/>
                                <connections>
                                    <action selector="loginButton:" destination="a3z-Kn-qtX" eventType="touchUpInside" id="JUu-Kb-Wpp"/>
...
                                </cells>
                            </collectionView>
                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ffe-6o-2uW" userLabel="SettingsButton">
                                <rect key="frame" x="11" y="20" width="55" height="55"/>
                                <constraints>
...
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <inset key="contentEdgeInsets" minX="40" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="- Camera Roll"/>
                                        <connections>
                                            <segue destination="syA-tw-goJ" kind="show" id="o6N-dh-Z4R"/>
...
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <inset key="contentEdgeInsets" minX="40" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="- Drawing"/>
                                        <connections>
                                            <segue destination="Vxd-fT-h6i" kind="show" id="2X8-6t-ZBn"/>
...
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <inset key="contentEdgeInsets" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="Add Favourites"/>
                                        <connections>
                                            <segue destination="yTl-Zc-6Ls" kind="show" id="5Be-uE-Pq6"/>
...
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <inset key="contentEdgeInsets" minX="40" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="- Colours/Sizes"/>
                                        <connections>
                                            <segue destination="gQE-FZ-Quz" kind="show" id="nd9-wr-3LK"/>
...
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <inset key="contentEdgeInsets" minX="40" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="Back to Main"/>
                                        <connections>
                                            <segue destination="BYZ-38-t0r" kind="show" id="IdA-yh-n2n"/>
...
                                <rect key="frame" x="597" y="360" width="188" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="See Your Stats"/>
                                <connections>
                                    <segue destination="0WZ-2i-1Pg" kind="show" id="kJF-cS-Nkh"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Ancient Yellow" backgroundImage="color3"/>
                                <connections>
                                    <action selector="themeTwoButton:" destination="gQE-FZ-Quz" eventType="touchUpInside" id="JLq-B1-br6"/>
...
                                    <constraint firstAttribute="width" constant="200" id="Yu4-PN-gg4"/>
                                </constraints>
                                <state key="normal" title="Large" image="large"/>
                                <connections>
                                    <action selector="largeSizeButton:" destination="gQE-FZ-Quz" eventType="touchUpInside" id="7Y9-Ni-HqW"/>
...
                                    <constraint firstAttribute="height" constant="100" id="ETc-ia-d4E"/>
                                </constraints>
                                <state key="normal" image="DarkGreen">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                    <constraint firstAttribute="width" constant="28" id="y9d-aN-rTW"/>
                                </constraints>
                                <state key="normal" image="DarkOrange">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hf9-5n-1iv">
                                <rect key="frame" x="32" y="30" width="39" height="30"/>
                                <state key="normal" title="Reset">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="532" y="98" width="121" height="29"/>
                                <segments>
                                    <segment title="Week"/>
                                    <segment title="Month"/>
                                </segments>
                                <connections>
...
