...
    @IBOutlet weak var sentenceCollection: UICollectionView!
    
    //  Segues into the SettingsSegue
    @IBAction func settingsButton(_sender: UIButton){
        let cancelAction = UIAlertAction(title: "Cancel",
                                         style: .default)
        let alert = UIAlertController(title: "Parental Control",
                                      message: "Please Provide Your Pin to change settings",
                                      preferredStyle: .alert)
        let saveAction = UIAlertAction(title: "Confirm",
                                       style: .default) { action in
                                        let pinEntered = alert.textFields![0]
                                        let user = Auth.auth().currentUser
                                        guard let uid = user?.uid else
                                        {
                                            return
...
                                            }
                                            
                                        })
                                        
        }
        alert.addTextField { enteredPin in
            enteredPin.placeholder = "Pin here"
            
        }
        
        alert.addAction(saveAction)
        alert.addAction(cancelAction)
        
...
